--- a/Boom Boats/Boom Boats.csproj
+++ b/Boom Boats/Boom Boats.csproj
@@ -102,14 +102,16 @@
     <Compile Include="Assets\GUI Animator\GUI Animator FREE\Demo Basic (CSharp)\Scripts\GUIAnimatorFREEDemo.cs" />
     <Compile Include="Assets\Scripts\Boat Scripts\BoatHealth.cs" />
     <Compile Include="Assets\Scripts\Boat Scripts\BoatMover.cs" />
-    <Compile Include="Assets\Scripts\Cannon Scripts\CannonHealth.cs" />
+    <Compile Include="Assets\Scripts\Cannon Scripts\Cannon.cs" />
     <Compile Include="Assets\Scripts\Cannon Scripts\CannonShoot.cs" />
-    <Compile Include="Assets\Scripts\Cannon Scripts\MoveLeftRight.cs" />
     <Compile Include="Assets\Scripts\CannonBall Scripts\CannonBall.cs" />
     <Compile Include="Assets\Scripts\CannonBall Scripts\Mover.cs" />
     <Compile Include="Assets\Scripts\Collisions\BoatCannonBallCollider.cs" />
     <Compile Include="Assets\Scripts\Collisions\BorderCollision.cs" />
     <Compile Include="Assets\Scripts\Collisions\Destroyer.cs" />
+    <Compile Include="Assets\Scripts\Island Scripts\IslandCannonRelation.cs" />
+    <Compile Include="Assets\Scripts\Island Scripts\IslandHealth.cs" />
+    <Compile Include="Assets\Scripts\Manager Scripts\MasterManager.cs" />
     <Compile Include="Assets\Scripts\Manager Scripts\ScoreManager.cs" />
     <Compile Include="Assets\Scripts\Manager Scripts\SpawnManager.cs" />
     <Compile Include="Assets\Scripts\Manager Scripts\TouchInput.cs" />
